--- a/입문자를 위한 CSS 기초 강의 유노코딩/박스모델4편.html
+++ b/입문자를 위한 CSS 기초 강의 유노코딩/박스모델4편.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        div {
-            box-sizing: border-box;
-            width: 500px;
-            height: 500px;
-            border: 1px solid red;
-            background-image: url(../Folder.jpg);
-            background-repeat: no-repeat;
-            background-position: center;
-            background-size: cover;
-        }
+      div {
+        box-sizing: border-box;
+        width: 500px;
+        height: 500px;
+        border: 1px solid red;
+        background-image: url(https://www.bing.com/images/blob?bcid=r8SdNjO5MDMEtw);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div>헬로우</div>
-</body>
+  </body>
 </html>
