--- a/입문자를 위한 반응형 웹 기초 강의/가변이미지.html
+++ b/입문자를 위한 반응형 웹 기초 강의/가변이미지.html
@@ -9,8 +9,9 @@
   </head>
   <body>
     <picture>
-      <source srcset="" media="(min-width:800px)" />
-      <img src="../channels4_profile.jpg]" alt="" />
+      <source srcset="../snowflakes.jpg" media="(min-width: 800px)" />
+      <source srcset="../dogs.jpg" media="(min-width: 600px)" />
+      <img src="../channels4_profile.jpg" alt="" />
     </picture>
   </body>
 </html>
