--- a/입문자를 위한 CSS 기초 강의 유노코딩/선택자 1편.html
+++ b/입문자를 위한 CSS 기초 강의 유노코딩/선택자 1편.html
@@ -5,15 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>선택자1편</title>
-    <style>
-        .text {
-            color: green;
-        }
-
-        #gagaga {
-            color: orange;
-        }
-    </style>
+   <link rel="stylesheet" href="css/선택자 1편.css">
 </head>
 <body>
     <h1 class="text">제목을나타낸다!</h1>
