--- a/입문자를 위한 CSS 기초 강의 유노코딩/의사요소.html
+++ b/입문자를 위한 CSS 기초 강의 유노코딩/의사요소.html
@@ -5,33 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      /* p::first-line {
-        color: red;
-      }
-      p::first-letter {
-        color: blue;
-      } */
-
-      li::marker {
-        color: teal;
-        font-size: 60px;
-      }
-      input::placeholder {
-        font-size: 18px;
-        color: black;
-      }
-      .def::before {
-        content: "앞에다가추가한컨텐츠";
-        color: red;
-        font-weight: 500;
-      }
-      .def::after {
-        content: "뒤에다가추가한컨텐츠";
-        color: yellowgreen;
-        font-weight: 200;
-      }
-    </style>
+    <link rel="stylesheet" href="css/의사요소.css" />
   </head>
   <body>
     <p class="def">
