--- a/입문자를 위한 반응형 웹 기초 강의 유노코딩/css 함수 개념 calc.html
+++ b/입문자를 위한 반응형 웹 기초 강의 유노코딩/css 함수 개념 calc.html
@@ -5,33 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      .message {
-        justify-content: space-around;
-        display: flex;
-        align-items: center;
-        height: 100px;
-        padding: 0.5em;
-        border: 1px solid #000;
-        font-size: 1.5em;
-      }
-      .message_text {
-        width: calc(100% - 100px);
-        height: 100%;
-        border: none;
-        resize: none;
-      }
-      .message_text:focus {
-        outline: none;
-      }
-
-      .message_send {
-        width: 100px;
-        height: 100%;
-        border-radius: 8px;
-        background-color: #9ec4cf;
-      }
-    </style>
+    <link rel="stylesheet" href="css/css 함수 개념 calc.css" />
   </head>
   <body>
     <div class="message">
