--- a/입문자를 위한 반응형 웹 기초 강의 유노코딩/뷰포트 단위.html
+++ b/입문자를 위한 반응형 웹 기초 강의 유노코딩/뷰포트 단위.html
@@ -5,23 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      .vh {
-        margin: 0;
-        font-size: 40vh;
-      }
-      .vw {
-        font-size: 40vw;
-      }
-
-      .vmax {
-        font-size: 40vmax;
-      }
-
-      .vmin {
-        font-size: 40vmin;
-      }
-    </style>
+    <link rel="stylesheet" href="css/뷰포트 단위.css" />
   </head>
   <body>
     <p class="vh">왕왕</p>
