--- a/입문자를 위한 CSS 기초 강의 유노코딩/display border 속성.html
+++ b/입문자를 위한 CSS 기초 강의 유노코딩/display border 속성.html
@@ -1,25 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>display border</title>
-    <style>
-        div {
-            border: 3px solid red;
-            display: inline;
-        }
-        span {
-            border-width: 5px;
-            border-style: dashed;
-            border-color: orchid;
-            display: block;
-        }
-    </style>
-</head>
-<body>
+    <link rel="stylesheet" href="css/display border 속성.css" />
+  </head>
+  <body>
     <div>나는야 블록 레벨</div>
     <span>나는야 인라인</span>
-</body>
+  </body>
 </html>
