--- a/입문자를 위한 CSS 기초 강의 유노코딩/flexbox1편.html
+++ b/입문자를 위한 CSS 기초 강의 유노코딩/flexbox1편.html
@@ -5,20 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      .container {
-        display: flex;
-        /* flex-direction: column; */
-        flex-direction: column-reverse;
-        /* flex-direction: row-reverse;
-        flex-direction: row; */
-      }
-      .item {
-        width: 80px;
-        height: 80px;
-        background-color: brown;
-      }
-    </style>
+    <link rel="stylesheet" href="css/flexbox1편.css" />
   </head>
   <body>
     <div class="container">
