--- a/입문자를 위한 CSS 기초 강의 유노코딩/flexbox2편.html
+++ b/입문자를 위한 CSS 기초 강의 유노코딩/flexbox2편.html
@@ -5,29 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      .container {
-        display: flex;
-        width: 300px;
-        height: 300px;
-        /* justify-content: center;
-        justify-content: flex-end;
-        justify-content: flex-start; 
-        justify-content: space-around; 
-        justify-content: space-between;  */
-        border: 2px solid black;
-        /* align-items: center;  */
-        flex-wrap: wrap-reverse;
-      }
-      .item {
-        width: 120px;
-        height: 60px;
-        background-color: brown;
-      }
-      .self {
-        align-self: flex-start;
-      }
-    </style>
+    <link rel="stylesheet" href="css/flexbox2편.css" />
   </head>
   <body>
     <div class="container">
