--- a/입문자를 위한 CSS 기초 강의 유노코딩/float 그리고 clear.html
+++ b/입문자를 위한 CSS 기초 강의 유노코딩/float 그리고 clear.html
@@ -1,30 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>float 그리고 clear</title>
-    <style>
-        #a {
-            width: 100px;
-            height: 50px;
-            background-color: orange;
-            float: right;
-        }
-        #b {
-            width: 100px;
-            height: 100px;
-            background-color: royalblue;
-            float: left;
-            
-        }
-        p {
-            clear: both;
-        }
-    </style>
-</head>
-<body>
+    <link rel="stylesheet" href="css/float 그리고 clear.css" />
+  </head>
+  <body>
     <div id="a"></div>
     <div id="b"></div>
     <p>안녕하세요 저는 세 번째 태그에요</p>
@@ -33,5 +16,5 @@
     <p>안녕하세요 저는 세 번째 태그에요</p>
     <p>안녕하세요 저는 세 번째 태그에요</p>
     <p>안녕하세요 저는 세 번째 태그에요</p>
-</body>
+  </body>
 </html>
