--- a/입문자를 위한 CSS 기초 강의 유노코딩/inherit, initial, unset.html
+++ b/입문자를 위한 CSS 기초 강의 유노코딩/inherit, initial, unset.html
@@ -5,31 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      div {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 300px;
-        height: 300px;
-        color: tomato;
-        font-size: 32px;
-        border: 3px dashed red;
-      }
-
-      p {
-        /* color: initial;
-        font-size: initial;
-        border: initial; */
-        color: unset;
-        font-size: unset;
-        border: unset;
-        width: unset;
-        /* color: initial;
-        font-size: initial;
-        border: initial; */
-      }
-    </style>
+    <link rel="stylesheet" href="css/inherit, initial, unset.css" />
   </head>
   <body>
     <div>
