--- a/입문자를 위한 CSS 기초 강의 유노코딩/z-index.html
+++ b/입문자를 위한 CSS 기초 강의 유노코딩/z-index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>박스모델1편</title>
-    <link rel="stylesheet" href="css/박스모델1편.css" />
+    <title>Document</title>
+    <link rel="stylesheet" href="css/z-index.css" />
   </head>
   <body>
-    <div>요소의 콘텐츠</div>
-    <span>check</span>
+    <div class="first">1</div>
+    <div class="second">2</div>
+    <div class="third">3</div>
+    <div class="fourth">4</div>
   </body>
 </html>
