--- a/입문자를 위한 CSS 기초 강의 유노코딩/기본문법및사용방법.html
+++ b/입문자를 위한 CSS 기초 강의 유노코딩/기본문법및사용방법.html
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>기본문법및사용방법</title>
-    <style>
-        p {
-            color: red;
-            font-size: 32px;
-        }
-    </style>
-</head>
-<body>
-    <p>
-        기본문법및사용방법
-    </p>
-</body>
+    <link rel="stylesheet" href="css/기본문법및사용방법.css" />
+  </head>
+  <body>
+    <p>기본문법및사용방법</p>
+  </body>
 </html>
