--- a/입문자를 위한 CSS 기초 강의 유노코딩/박스모델2편.html
+++ b/입문자를 위한 CSS 기초 강의 유노코딩/박스모델2편.html
@@ -1,37 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>박스모델2편</title>
-    <style>
-        div {
-            width: 100px;
-            height: 100px;
-            padding: 10px;
-            border: 5px solid red;
-            margin: 20px;
-            padding-top: 10px;
-            padding-right: 20px;
-            padding-bottom: 30px;
-            padding-left: 40px;
-            margin-top: 40px;
-            margin-right: 30px;
-            margin-bottom: 20px;
-            margin-left: 10px;
-        }
-        span {
-            width: 100px;
-            height: 100px;
-            border: 5px solid royalblue;
-            margin: 10px 30px 50px 40px;
-            display: inline-block;
-        }
-    </style>
-</head>
-<body>
+    <link rel="stylesheet" href="css/박스모델2편.css" />
+  </head>
+  <body>
     <div></div>
     <span></span>
-</body>
+  </body>
 </html>
