--- a/입문자를 위한 CSS 기초 강의 유노코딩/박스모델3편.html
+++ b/입문자를 위한 CSS 기초 강의 유노코딩/박스모델3편.html
@@ -5,15 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>박스모델3편</title>
-    <style>
-        div {
-            width: 100px;
-            height: 100px;
-            border: 5px solid tomato;
-            padding: 10px 20px;
-            box-sizing: content-box;
-        }
-    </style>
+    <link rel="stylesheet" href="css/박스모델3편.css">
 </head>
 <body>
     <div></div>
