--- a/입문자를 위한 CSS 기초 강의 유노코딩/박스모델4편.html
+++ b/입문자를 위한 CSS 기초 강의 유노코딩/박스모델4편.html
@@ -5,18 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      div {
-        box-sizing: border-box;
-        width: 500px;
-        height: 500px;
-        border: 1px solid red;
-        background-image: url(https://www.bing.com/images/blob?bcid=r8SdNjO5MDMEtw);
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
-      }
-    </style>
+    <link rel="stylesheet" href="css/박스모델4편.css" />
   </head>
   <body>
     <div>헬로우</div>
