--- a/입문자를 위한 CSS 기초 강의 유노코딩/선택자 2편 특성 선택자와 결합자.html
+++ b/입문자를 위한 CSS 기초 강의 유노코딩/선택자 2편 특성 선택자와 결합자.html
@@ -5,14 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      [class*="te"] {
-        color: blue;
-      }
-      [id^="uni"] {
-        color: brown;
-      }
-    </style>
+    <link rel="stylesheet" href="css/선택자 2편 특성 선택자와 결합자.css" />
   </head>
   <body>
     <h1>선택자연습</h1>
