--- a/입문자를 위한 CSS 기초 강의 유노코딩/의사클래스(가상클래스).html
+++ b/입문자를 위한 CSS 기초 강의 유노코딩/의사클래스(가상클래스).html
@@ -5,43 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      [type="button"] {
-        width: 100px;
-        height: 30px;
-        background-color: tomato;
-        color: white;
-        border: none;
-        border-radius: 8px;
-      }
-      [type="button"]:hover {
-        background-color: gray;
-      }
-      [type="button"]:active {
-        background-color: black;
-      }
-      input:focus {
-        background-color: red;
-        color: white;
-      }
-      input:disabled {
-        height: 100px;
-      }
-      #body {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 50px;
-      }
-      .box {
-        width: 50px;
-        height: 50px;
-        background-color: darkblue;
-        color: white;
-      }
-      .box:nth-child(2n) {
-        background-color: brown;
-      }
-    </style>
+    <link rel="stylesheet" href="css/의사클래스(가상클래스).css" />
   </head>
   <body>
     <input type="button" value="버튼" />
