--- a/입문자를 위한 반응형 웹 기초 강의 유노코딩/가변 레이아웃.html
+++ b/입문자를 위한 반응형 웹 기초 강의 유노코딩/가변 레이아웃.html
@@ -5,44 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      * {
-        box-sizing: border-box;
-      }
-      .container {
-        width: 90%;
-        margin: 0 auto;
-        text-align: center;
-      }
-      .header {
-        width: 100%;
-        height: 100px;
-        background-color: tomato;
-      }
-
-      .main {
-        float: left;
-        width: 67%;
-        height: 300px;
-        background-color: orangered;
-        padding: 10%;
-      }
-
-      .aside {
-        float: right;
-        width: 33%;
-        height: 300px;
-        padding: 10%;
-        background-color: purple;
-      }
-
-      .footer {
-        clear: both;
-        width: 100%;
-        height: 100px;
-        background-color: violet;
-      }
-    </style>
+    <link rel="stylesheet" href="css/가변 레이아웃.css" />
   </head>
   <body>
     <div class="container">
