--- a/입문자를 위한 반응형 웹 기초 강의 유노코딩/가변동영상.html
+++ b/입문자를 위한 반응형 웹 기초 강의 유노코딩/가변동영상.html
@@ -5,26 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      .player {
-        padding-top: 56.25%;
-        position: relative;
-      }
-      iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-      }
-    </style>
+    <link rel="stylesheet" href="css/가변동영상.css" />
   </head>
   <body>
     <div class="player">
       <iframe
         width="560"
         height="315"
-        src="https://www.youtube.com/embed/QOZlweqJ2S4"
+        src="videos/my-cat.mp4"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
