--- a/입문자를 위한 반응형 웹 기초 강의 유노코딩/미디어쿼리.html
+++ b/입문자를 위한 반응형 웹 기초 강의 유노코딩/미디어쿼리.html
@@ -5,26 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      img {
-        width: 200px;
-        height: 200px;
-      }
-      @media screen and (min-width: 800px) {
-        img {
-          width: 400px;
-          height: 400px;
-        }
-      }
-      @media screen and (min-width: 1200px) {
-        img {
-          width: 800px;
-          height: 800px;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="css/미디어쿼리.css" />
   </head>
   <body>
-    <img src="../channels4_profile.jpg" alt="" />
+    <img src="imgs/1.png" alt="" />
   </body>
 </html>
