--- a/입문자를 위한 반응형 웹 기초 강의 유노코딩/상대단위 em rem.html
+++ b/입문자를 위한 반응형 웹 기초 강의 유노코딩/상대단위 em rem.html
@@ -5,20 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      .inner {
-        display: inline-block;
-        width: 200px;
-        height: 200px;
-        background-color: blueviolet;
-        font-size: 16px;
-        padding: 1rem;
-        margin: 1rem;
-      }
-      .outer {
-        font-size: 32px;
-      }
-    </style>
+    <link rel="stylesheet" href="css/상대단위 em rem.css" />
   </head>
   <body>
     <div class="outer">
